--- a/src/components/header.html
+++ b/src/components/header.html
@@ -101,13 +101,13 @@
             <a class="p-1 nav__link {=$highlight-home}" href="./index.html">Home</a>
           </li>
           <li class="nav__item">
-            <a class="p-1 nav__link {=$highlight-portfolio}" href="./pages/portfolio.html">Portfolio</a>
+            <a class="p-1 nav__link {=$highlight-portfolio}" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav__item">
-            <a class="p-1 nav__link {=$highlight-services}" href="./pages/service.html">Services</a>
+            <a class="p-1 nav__link {=$highlight-services}" href="./service.html">Services</a>
           </li>
           <li class="nav__item">
-            <a class="p-1 nav__link {=$highlight-about}" href="./pages/about.html">About Us</a>
+            <a class="p-1 nav__link {=$highlight-about}" href="./about.html">About Us</a>
           </li>
         </ul>
         <button class="nav__btn btn btn_secondary">
