--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -153,10 +153,10 @@
         <div class="swiper-pagination"></div>
 
         <div class="swiper__nav">
-          <div class="swiper__button-prev">
+          <div id="prevBtn" class="swiper__button-prev">
             <span class="icon-arrow-right"></span>
           </div>
-          <div class="swiper__button-next">
+          <div id="nextBtn" class="swiper__button-next">
             <span class="icon-arrow-right"></span>
           </div>
         </div>
