--- a/src/styles/components/testimonials.scss
+++ b/src/styles/components/testimonials.scss
@@ -25,6 +25,7 @@
     @include desktop {
       text-align: center;
       margin-bottom: 90px;
+      max-width: none;
     }
   }
 
@@ -148,6 +149,7 @@
       cursor: pointer;
       font-size: 24px;
       line-height: 24px;
+      transition: opacity var(--animation);
     }
 
     &__button-prev {
