--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -7,7 +7,7 @@
   &::before {
     position: absolute;
     content: "";
-    background: url(../../assets/img/footer-fish.svg) no-repeat 100% 100% / contain;
+    background: url(../assets/img/footer-fish.svg) no-repeat 100% 100% / contain;
     width: 524px;
     height: 472px;
     top: -143px;
