--- a/src/components/header.html
+++ b/src/components/header.html
@@ -111,7 +111,7 @@
           </li>
         </ul>
         <button class="nav__btn btn btn_secondary">
-          <span class="btn__text">Contact Us!</span>
+          <span class="btn__text">Contact Us</span>
           <span class="btn__icon btn__icon-arrow"><span class="icon-arrow-right"></span></span>
         </button>
       </nav>
