--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -3,6 +3,11 @@
   background-color: var(--dark-black);
   color: var(--white);
   overflow: hidden;
+  padding: 40px 0;
+
+  @include tablet {
+    padding: 60px 0;
+  }
 
   &::before {
     position: absolute;
@@ -56,12 +61,12 @@
       width: auto;
     }
 
-    &:not(:first-child) {
-      li:first-child {
-        color: var(--grey);
-        margin-bottom: 0;
-      }
-    }
+    //&:not(:first-child) {
+    //  li:first-child {
+    //    color: var(--grey);
+    //    margin-bottom: 10px;
+    //  }
+    //}
   }
 
   &__menu,
@@ -69,6 +74,13 @@
   &__contacts {
     @include tablet {
       width: fit-content;
+    }
+
+    li:first-child {
+      @include tablet {
+        color: var(--grey);
+        margin-bottom: 10px;
+      }
     }
   }
 
@@ -168,7 +180,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 26px;
+    gap: 20px;
     flex-direction: row;
     order: 4;
     margin: 60px 0;
