add contacts page

--- a/src/components/header-wh.html
+++ b/src/components/header-wh.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header-white">
   <div class="container">
     <div class="header__content">
       <nav class="nav">
@@ -110,7 +110,7 @@
             <a class="p-1 nav__link {=$highlight-about}" href="./about.html">About Us</a>
           </li>
         </ul>
-        <a href="./contact-us.html" class="nav__btn btn btn_secondary secretar">
+        <a href="./contact-us.html" class="nav__btn btn btn_secondary">
           <span class="btn__text">Contact Us</span>
           <span class="btn__icon btn__icon-arrow"><span class="icon-arrow-right"></span></span>
         </a>
