--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -93,6 +93,11 @@ select {
   }
 }
 
+.container-fluid {
+  width: 100%;
+  margin: 0 auto;
+}
+
 //.footer {
 //  padding: 3rem 0;
 //  font-size: 1.6rem;
