add contacts page

--- a/src/styles/pages/contact-us.scss
+++ b/src/styles/pages/contact-us.scss
@@ -45,7 +45,9 @@
     display: none;
 
     @include desktop {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
   }
 
