update home page and contact

--- a/src/assets/fonts/icons/icons.scss
+++ b/src/assets/fonts/icons/icons.scss
@@ -27,70 +27,120 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-location_pin_filled:before {
+  content: "\e911";
+}
+.icon-lock-circle:before {
+  content: "\e912";
+}
+.icon-clickable_mouse:before {
+  content: "\e913";
+}
+.icon-feedback_star:before {
+  content: "\e914";
+}
+.icon-mobile:before {
+  content: "\e915";
+}
+.icon-comments_note:before {
+  content: "\e916";
+}
+.icon-navigation:before {
+  content: "\e917";
+}
+.icon-color-scheme:before {
+  content: "\e918";
+}
+.icon-eye:before {
+  content: "\e919";
+}
+.icon-Branding_paintbucket:before {
+  content: "\e91a";
+}
+.icon-rulerpen_styleguide:before {
+  content: "\e91b";
+}
+.icon-mockups:before {
+  content: "\e91c";
+}
+.icon-interaction:before {
+  content: "\e91d";
+}
+.icon-main-component:before {
+  content: "\e91e";
+}
+.icon-magicpen:before {
+  content: "\e91f";
+}
+.icon-user-edit:before {
+  content: "\e920";
+}
+.icon-mind-arrow:before {
+  content: "\e921";
+}
+.icon-trend:before {
+  content: "\e922";
+}
+.icon-message-question:before {
+  content: "\e923";
+}
+.icon-crown:before {
+  content: "\e924";
+}
+.icon-user-search:before {
+  content: "\e925";
+}
+.icon-close-square:before {
+  content: "\e926";
+}
 .icon-linkedin:before {
   content: "\e90f";
 }
-
 .icon-behance:before {
   content: "\e910";
 }
-
 .icon-copy:before {
   content: "\e90e";
 }
-
 .icon-coffee:before {
   content: "\e900";
 }
-
 .icon-ok:before {
   content: "\e901";
 }
-
 .icon-star:before {
   content: "\e902";
 }
-
 .icon-info-circle:before {
   content: "\e903";
 }
-
 .icon-attach:before {
   content: "\e904";
 }
-
 .icon-calendar:before {
   content: "\e905";
 }
-
 .icon-arrow-down:before {
   content: "\e906";
 }
-
 .icon-arrow-right:before {
   content: "\e907";
 }
-
 .icon-location:before {
   content: "\e908";
 }
-
 .icon-call:before {
   content: "\e909";
 }
-
 .icon-sms:before {
   content: "\e90a";
 }
-
 .icon-facebook:before {
   content: "\e90b";
 }
-
 .icon-whatsapp:before {
   content: "\e90c";
 }
-
 .icon-dribbble:before {
   content: "\e90d";
 }
