--- a/src/components/header-wh.html
+++ b/src/components/header-wh.html
@@ -104,7 +104,7 @@
             <a class="p-1 nav__link {=$highlight-portfolio}" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav__item">
-            <a class="p-1 nav__link {=$highlight-services}" href="./service.html">Services</a>
+            <a class="p-1 nav__link {=$highlight-services}" href="./services.html">Services</a>
           </li>
           <li class="nav__item">
             <a class="p-1 nav__link {=$highlight-about}" href="./about.html">About Us</a>
