--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -10,40 +10,40 @@
       <ul class="footer__menu">
         <li><p class="p-1">Company</p></li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link p-2">Home</a>
+          <a href="./index.html" class="footer__menu-link p-2">Home</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link p-2">Services</a>
+          <a href="./services.html" class="footer__menu-link p-2">Services</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link p-2">Portfolio</a>
+          <a href="./portfolio.html" class="footer__menu-link p-2">Portfolio</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link p-2">About Us</a>
+          <a href="./about.html" class="footer__menu-link p-2">About Us</a>
         </li>
       </ul>
       <ul class="footer__social">
         <li><p class="p-1">Socials</p></li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">
+          <a href="https://dribble.com" class="footer__social-link p-2">
             <span class="footer__social-text">Dribble</span>
             <span class="footer__social-icon icon-dribbble"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">
+          <a href="https://behance.com" class="footer__social-link p-2">
             <span class="footer__social-text">Behance</span>
             <span class="footer__social-icon icon-behance"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">
+          <a href="https://facebook.com" class="footer__social-link p-2">
             <span class="footer__social-text">Facebook</span>
             <span class="footer__social-icon icon-facebook"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">
+          <a href="https://linkedin.com" class="footer__social-link p-2">
             <span class="footer__social-text">LinkedIn</span>
             <span class="footer__social-icon icon-linkedin"></span>
           </a>
@@ -53,19 +53,19 @@
         <li><p class="p-1">Contact</p></li>
         <li class="footer__contacts-item">
           <span class="icon-sms icon"></span>
-          <a id="email-address" class="p-2" href="mailto:email@example">email@example</a>
-          <span class="icon-copy" id="phone-copy"></span>
+          <a id="email-address" class="p-2" href="mailto:hello@mfisher.com">hello@mfisher.com</a>
+          <span class="icon-copy" id="email-copy" onclick="copyEmail()"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon icon-call"></span><a id="phone-number" class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
-          <span id="email-copy" class="icon-copy"></span>
+          <span id="phone-copy" class="icon-copy" onclick="copyPhoneNumber()"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon icon-location"></span>
           <p class="p-2">Warsaw, Poland</p>
         </li>
         <li class="footer__contacts-item">
-          <a href="#" class="btn btn_secondary footer__btn footer__btn-desk">
+          <a href="./contact-us.html" class="btn btn_secondary footer__btn footer__btn-desk">
             <span class="btn__text">Contact Us</span>
             <span class="btn__icon btn__icon-arrow">
               <span class="icon-arrow-right"></span>
@@ -73,7 +73,7 @@
           </a>
         </li>
       </ul>
-      <a href="#" class="btn btn_secondary footer__btn footer__btn-mob">
+      <a href="./contact-us.html" class="btn btn_secondary footer__btn footer__btn-mob">
         <span class="btn__text">Contact Us</span>
         <span class="btn__icon btn__icon-arrow">
           <span class="icon-arrow-right"></span>
@@ -99,18 +99,18 @@
         <a href="./index.html" class="nav__link">Home</a>
       </li>
       <li class="nav__item">
-        <a href="./pages/portfolio.html" class="nav__link">Portfolio</a>
+        <a href="./portfolio.html" class="nav__link">Portfolio</a>
       </li>
       <li class="nav__item">
-        <a href="./pages/services.html" class="nav__link">Services</a>
+        <a href="./services.html" class="nav__link">Services</a>
       </li>
       <li class="nav__item">
-        <a href="./pages/about.html" class="nav__link">About Us</a>
+        <a href="./about.html" class="nav__link">About Us</a>
       </li>
     </ul>
     <ul class="btn__list">
       <li class="btn__item">
-        <a href="#" class="btn btn_primary">
+        <a href="./contact-us.html" class="btn btn_primary">
           <span class="btn__text">Contact Us</span>
           <span class="btn__icon btn__icon-arrow">
             <span class="icon-arrow-right"></span>
@@ -128,3 +128,33 @@
     </ul>
   </div>
 </div>
+
+<script>
+  function copyPhoneNumber() {
+    const phoneNumberElement = document.getElementById("phone-number");
+    const phoneNumber = phoneNumberElement.textContent;
+
+    navigator.clipboard
+      .writeText(phoneNumber)
+      .then(() => {
+        console.log("Номер телефона скопирован: " + phoneNumber);
+      })
+      .catch((err) => {
+        console.error("Ошибка при копировании: ", err);
+      });
+  }
+
+  function copyEmail() {
+    const emailElement = document.getElementById("email-address");
+    const emailAddress = emailElement.textContent;
+
+    navigator.clipboard
+      .writeText(emailAddress)
+      .then(() => {
+        console.log("email скопирован: " + emailAddress);
+      })
+      .catch((err) => {
+        console.error("Ошибка при копировании: ", err);
+      });
+  }
+</script>
