--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -743,9 +743,11 @@
   }
 
   &__item-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
+    @include desktop {
+      display: flex;
+      justify-content: space-between;
+      align-items: stretch;
+    }
   }
 
   &__info {
