--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "media";
 @import "base";
 @import "global";
+@import "components/popup";
 @import "components/cta";
 @import "components/testimonials";
 @import "components/header";
