--- a/src/styles/pages/contact-us.scss
+++ b/src/styles/pages/contact-us.scss
@@ -1,4 +1,5 @@
 @import "../media";
+@import "../form";
 
 .contacts {
   padding-top: 90px;
@@ -95,227 +96,4 @@
   img {
     width: 100%;
   }
-}
-
-.social {
-  &__list {
-    display: none;
-
-    @include desktop {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 30px;
-    }
-  }
-
-  &__icon {
-    font-size: 24px;
-    line-height: 24px;
-    color: var(--medium-grey);
-  }
-}
-
-.order-form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 40px;
-}
-
-.input-field {
-  position: relative;
-}
-
-.input-field label {
-  color: var(--grey);
-}
-
-.input-field input,
-.input-field textarea {
-  border: 1px solid var(--dark-black);
-  padding: 13px 16px;
-  width: 100%;
-  background-color: var(--white);
-}
-
-.input-field input {
-  padding-left: 52px;
-}
-
-.input-field .icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 16px;
-  font-size: 24px;
-  line-height: 24px;
-  color: var(--dark-black);
-}
-
-.input-group {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-
-  @include tablet {
-    flex-direction: row;
-  }
-}
-
-//.accept-box {
-//  margin-top: 15px;
-//}
-
-.budget-container {
-  display: flex;
-  gap: 8px 4px;
-  flex-wrap: wrap;
-  margin-top: 8px;
-
-  @include media-custom(700px) {
-    flex-wrap: nowrap;
-  }
-
-  @include tablet {
-    gap: 10px;
-  }
-}
-
-.budget-option {
-  padding: 13px;
-  border: 1px solid var(--dark-black);
-  cursor: pointer;
-  font-size: 16px;
-  text-align: center;
-  color: var(--dark-black);
-  width: 100%;
-
-  &:first-child,
-  &:nth-child(2),
-  &:nth-child(3) {
-    max-width: calc((100% - 8px) / 3);
-
-    @include media-custom(700px) {
-      max-width: none;
-      min-width: fit-content;
-    }
-  }
-
-  &:nth-child(4),
-  &:nth-child(5) {
-    max-width: calc((100% - 4px) / 2);
-
-    @include media-custom(700px) {
-      max-width: none;
-      min-width: fit-content;
-    }
-  }
-
-  &.selected {
-    background-color: var(--main-green);
-    border-color: var(--main-green);
-  }
-}
-
-.label-accept {
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: var(--dark-black);
-}
-
-.label-accept-span {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 16px;
-  height: 16px;
-  border: 1px solid var(--dark-black);
-  border-radius: 2px;
-  margin-right: 8px;
-  fill: transparent;
-  flex-shrink: 0;
-  transition:
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input-accept:checked + .label-accept .label-accept-span {
-  background-color: transparent;
-  border: none;
-  fill: var(--main-green);
-}
-
-.input-accept:focus + .label-accept .label-accept-span {
-  border-color: var(--main-green);
-}
-
-//.accept-link {
-//  color: var(--iris);
-//  text-decoration: underline;
-//}
-
-.accept-box {
-  margin-bottom: 24px;
-}
-
-.form {
-  &__footer {
-    .p-4 {
-      color: var(--grey);
-
-      @include desktop {
-        white-space: nowrap;
-      }
-    }
-  }
-
-  &__footer-action {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 15px;
-    margin-bottom: 16px;
-
-    @include media-custom(700px) {
-      flex-direction: row-reverse;
-      justify-content: flex-end;
-    }
-
-    .btn {
-      width: 100%;
-
-      @include media-custom(700px) {
-        width: fit-content;
-      }
-    }
-  }
-}
-
-.file {
-  &__list {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 30px;
-  }
-
-  &__item {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: var(--dark-black);
-    gap: 8px;
-  }
-}
-
-.btn-del {
-  font-size: 20px;
-  line-height: 20px;
-  color: #ee3c3c;
-  cursor: pointer;
 }
