--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -61,7 +61,7 @@
 
   &__content-text {
     display: none;
-    background: url("../../assets/img/popup/popup-bg.jpg") no-repeat 50% 50% / cover;
+    background: url("../assets/img/popup/popup-bg.jpg") no-repeat 50% 50% / cover;
     color: var(--white);
     max-width: 480px;
     width: 100%;
