--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -175,6 +175,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 30px;
+    flex-wrap: wrap;
   }
 
   &__item {
@@ -183,6 +184,7 @@
     align-items: center;
     color: var(--dark-black);
     gap: 8px;
+    white-space: nowrap;
   }
 }
 
