update home page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import "base";
 @import "global";
 @import "components/popup";
+@import "components/popup-mini";
 @import "components/cta";
 @import "components/testimonials";
 @import "components/header";
