--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -25,25 +25,25 @@
       <ul class="footer__social">
         <li><p class="p-1">Socials</p></li>
         <li class="footer__social-item">
-          <a href="https://dribble.com" class="footer__social-link p-2">
+          <a href="https://dribble.com" class="footer__social-link p-2" target="_blank">
             <span class="footer__social-text">Dribble</span>
             <span class="footer__social-icon icon-dribbble"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="https://behance.com" class="footer__social-link p-2">
+          <a href="https://behance.com" class="footer__social-link p-2" target="_blank">
             <span class="footer__social-text">Behance</span>
             <span class="footer__social-icon icon-behance"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="https://facebook.com" class="footer__social-link p-2">
+          <a href="https://facebook.com" class="footer__social-link p-2" target="_blank">
             <span class="footer__social-text">Facebook</span>
             <span class="footer__social-icon icon-facebook"></span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a href="https://linkedin.com" class="footer__social-link p-2">
+          <a href="https://linkedin.com" class="footer__social-link p-2" target="_blank">
             <span class="footer__social-text">LinkedIn</span>
             <span class="footer__social-icon icon-linkedin"></span>
           </a>
@@ -86,8 +86,8 @@
   <div class="container">
     <div class="footer-bottom__content">
       <span>© 2023 MaryFisher. All Rights Reserved.</span>
-      <a href="#">Terms of Service</a>
-      <a href="#">Privacy Policy</a>
+      <a href="#" target="_blank">Terms of Service</a>
+      <a href="#" target="_blank">Privacy Policy</a>
     </div>
   </div>
 </div>
@@ -118,7 +118,7 @@
         </a>
       </li>
       <li class="btn__item">
-        <a href="#" class="btn btn_secondary">
+        <a href="#" class="btn btn_secondary" target="_blank">
           <span class="btn__icon btn__icon-calendar">
             <span class="icon-calendar"></span>
           </span>
@@ -130,31 +130,31 @@
 </div>
 
 <script>
-  function copyPhoneNumber() {
-    const phoneNumberElement = document.getElementById("phone-number");
-    const phoneNumber = phoneNumberElement.textContent;
+  function copyToClipboard(elementId, messageType) {
+    const element = document.getElementById(elementId);
+
+    if (!element) {
+      console.error(`Элемент с ID "${elementId}" не найден`);
+      return;
+    }
+
+    const text = element.textContent;
 
     navigator.clipboard
-      .writeText(phoneNumber)
+      .writeText(text)
       .then(() => {
-        console.log("Номер телефона скопирован: " + phoneNumber);
+        console.log(`${messageType} скопирован: ${text}`);
       })
       .catch((err) => {
-        console.error("Ошибка при копировании: ", err);
+        console.error(`Ошибка при копировании ${messageType}:`, err);
       });
   }
 
-  function copyEmail() {
-    const emailElement = document.getElementById("email-address");
-    const emailAddress = emailElement.textContent;
+  function copyPhoneNumber() {
+    copyToClipboard("phone-number", "Номер телефона");
+  }
 
-    navigator.clipboard
-      .writeText(emailAddress)
-      .then(() => {
-        console.log("email скопирован: " + emailAddress);
-      })
-      .catch((err) => {
-        console.error("Ошибка при копировании: ", err);
-      });
+  function copyEmail() {
+    copyToClipboard("email-address", "Email");
   }
 </script>
