--- a/src/assets/fonts/icons/icons.scss
+++ b/src/assets/fonts/icons/icons.scss
@@ -27,6 +27,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-accept:before {
+  content: "\e903";
+}
 .icon-close-lg:before {
   content: "\e900";
 }
