--- a/src/components/popup-mini.html
+++ b/src/components/popup-mini.html
@@ -5,7 +5,7 @@
       <img src="./assets/icons/icons-popup.svg" alt="icon" />
     </div>
     <div class="popup-mini__body">
-      <h5 class="popup-mini__title">Thank you for reaching out!</h5>
+      <h5 class="popup-mini__title">Thank you for reaching&nbsp;out!</h5>
       <p class="p-2 popup-mini__text">We've received your request and will get back to you shortly.</p>
       <a href="./index.html" class="btn btn_primary">
         <span class="btn__text">Go to Home Page</span>
