--- a/src/styles/components/popup-mini.scss
+++ b/src/styles/components/popup-mini.scss
@@ -17,8 +17,12 @@
     display: flex;
   }
 
-  &__btn-close {
+  &__close-btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
     color: var(--white);
+    cursor: pointer;
   }
 
   &__content {
@@ -26,10 +30,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 90vw;
+    max-width: 90vw;
     width: 100%;
-    max-width: 600px;
     background-color: var(--white);
+
+    @include media-custom(660px) {
+      max-width: 600px;
+    }
   }
 
   &__header {
@@ -38,14 +45,14 @@
     align-items: center;
     justify-content: center;
     padding: 30px;
-    background: url("./assets/img/popup-mini/bg.jpg") no-repeat 50% 50% / cover;
+    background: url("../assets/img/popup-mini/bg.jpg") no-repeat 50% 50% / cover;
     width: 100%;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background: url("./assets/img/popup-mini/bg@2x.jpg") no-repeat 50% 50% / cover;
+      background: url("../assets/img/popup-mini/bg@2x.jpg") no-repeat 50% 50% / cover;
     }
 
-    @include desktop {
+    @include media-custom(660px) {
       padding: 40px;
     }
 
@@ -53,7 +60,7 @@
       width: 50px;
       height: auto;
 
-      @include desktop {
+      @include media-custom(660px) {
         width: 82px;
       }
     }
@@ -63,10 +70,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     padding: 60px 30px;
   }
 
   &__text {
     margin: 16px 0 34px;
+    color: var(--grey);
   }
 }
