--- a/src/components/cta.html
+++ b/src/components/cta.html
@@ -10,12 +10,12 @@
           </span>
           <span class="btn__text">Schedule a Meeting</span>
         </a>
-        <a href="#" class="btn btn_secondary">
+        <button class="btn btn_secondary cta__btn">
           <span class="btn__text">Request Consultation</span>
           <span class="btn__icon btn__icon-arrow">
             <span class="icon icon-arrow-right"></span>
           </span>
-        </a>
+        </button>
       </div>
     </div>
   </div>
