--- a/src/components/popup-mini.html
+++ b/src/components/popup-mini.html
@@ -1,7 +1,9 @@
-<div class="popup-mini" id="popup-mini">
+<div class="popup popup-mini" id="popup-mini">
   <div class="popup-mini__content">
     <div class="popup-mini__header">
-      <button id="closePopup" class="popup-mini__close-btn"><span class="icon icon-close-lg"></span></button>
+      <button id="closePopup" class="popup-mini__close-btn popup__close">
+        <span class="icon icon-close-lg"></span>
+      </button>
       <img src="./assets/icons/icons-popup.svg" alt="icon" />
     </div>
     <div class="popup-mini__body">
