--- a/src/components/request_popup.html
+++ b/src/components/request_popup.html
@@ -1,6 +1,6 @@
 <div class="popup" id="popup">
   <div class="popup__content">
-    <button id="closePopup" class="popup__close-btn"><span class="icon icon-close-lg"></span></button>
+    <button id="closePopup" class="popup__close-btn popup__close"><span class="icon icon-close-lg"></span></button>
     <div class="popup__content-text">
       <h4 class="popup__title">Contact us</h4>
       <p class="p-1">
@@ -71,7 +71,7 @@
             pattern="[A-Za-z\s]+"
             required
           />
-          <span class="icon-sms icon"></span>
+          <span class="icon-user-tag icon"></span>
         </div>
 
         <div class="input-field">
