--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import "reset";
 @import "vars";
 @import "buttons";
-@import "media";
+//@import "media";
 @import "base";
 @import "global";
 @import "components/popup";
