--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -98,6 +98,29 @@ select {
   margin: 0 auto;
 }
 
+.services,
+.services-grid {
+  .tag {
+    &__list {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 6px 6px;
+      flex-wrap: wrap;
+      margin: 12px 0 16px;
+    }
+
+    &__item {
+      color: var(--main-green);
+      background-color: rgba(255, 255, 255, 0.05);
+      border-radius: 10px;
+      padding: 2px 4px;
+      width: fit-content;
+      text-transform: capitalize;
+    }
+  }
+}
+
 //.footer {
 //  padding: 3rem 0;
 //  font-size: 1.6rem;
