--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -29,7 +29,11 @@
     background-color: var(--white);
     position: relative;
     box-shadow: 0 14px 54px 0 rgba(0, 0, 0, 0.16);
-    width: fit-content;
+    max-height: 100%;
+    overflow-y: auto;
+
+    @include tablet {
+    }
   }
 
   &__close-btn {
