--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,6 +1,26 @@
 @import "../components/hero";
 @import "../buttons";
 
+.hero {
+  padding-top: 150px;
+  padding-bottom: 186px;
+
+  @include mobile {
+    padding-top: 200px;
+    padding-bottom: 174px;
+  }
+
+  @include tablet {
+    padding-top: 260px;
+    padding-bottom: 340px;
+  }
+
+  @include desktop {
+    padding-top: 224px;
+    padding-bottom: 176px;
+  }
+}
+
 .principles {
   padding: 80px 0 60px;
   background-color: var(--white);
@@ -502,8 +522,9 @@
         gap: 8px;
       }
     }
+
     &__item {
-      padding: 0 8px;
+      padding: 4px 10px;
       border: 1px solid rgba(255, 255, 255, 0.24);
       border-radius: 40px;
       width: fit-content;
@@ -511,8 +532,12 @@
       color: var(--light-grey);
       white-space: nowrap;
 
+      @include mobile {
+        padding: 4px 6px;
+      }
+
       @include tablet {
-        padding: 3px 10px;
+        padding: 4px 10px;
       }
     }
   }
