--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -10,8 +10,8 @@ body {
 
 body {
   font-family: var(--font-family), sans-serif;
-  background: var(--main-color);
-  color: var(--main-text-color);
+  background: var(--white);
+  color: var(--dark-black);
   font-size: 16px;
   line-height: 1.5;
   display: flex;
@@ -123,9 +123,4 @@ select {
       text-transform: capitalize;
     }
   }
-}
-.item-line {
-  width: 3px;
-  height: 20px;
-  background-color: var(--light-gray);
 }
