--- a/src/styles/pages/services.scss
+++ b/src/styles/pages/services.scss
@@ -382,15 +382,6 @@
       }
 
       h4:first-child {
-        position: relative;
-
-        &::before {
-          position: absolute;
-          content: "";
-          width: 3px;
-          height: 28px;
-          background-color: var(--light-grey);
-        }
       }
 
       &_blue {
@@ -410,11 +401,12 @@
       box-shadow: 0 12px 40px 0 rgba(27, 40, 73, 0.06);
       background: var(--white);
       border: 1px solid var(--light-grey);
-      padding: 30px 16px;
+      padding: 40px 30px 16px;
       width: 100%;
 
       @include desktop {
         max-width: calc((100% - 40px) / 3);
+        min-height: 385px;
       }
     }
 
@@ -422,8 +414,8 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      gap: 28px;
-      margin-bottom: 16px;
+      gap: 20px;
+      margin-bottom: 30px;
       color: var(--medium-grey);
 
       //h4:first-child {
@@ -431,8 +423,15 @@
       //}
     }
 
+    &__item-header-line {
+      width: 3px;
+      height: 24px;
+      background-color: var(--light-grey);
+    }
+
     &__item-text {
-      margin-top: 16px;
+      margin-top: 20px;
+      color: var(--dark-black);
     }
   }
 
