--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -244,6 +244,10 @@
       max-width: 289px;
       flex-shrink: 0;
     }
+
+    @include desktop {
+      max-width: 390px;
+    }
   }
 
   &__item {
@@ -268,10 +272,10 @@
   }
 
   &__img {
-    display: none;
+    margin-top: 60px;
 
-    @include tablet {
-      display: block;
+    @include desktop {
+      margin-top: 0;
     }
 
     img {
