update about page

--- a/src/components/hero.html
+++ b/src/components/hero.html
@@ -16,7 +16,8 @@
       </a>
     </div>
     <div class="section__circle">
-      <img src="./assets/img/stamp_btn.svg" alt="icon" />
+      <img class="stamp" src="./assets/img/stamp_btn.svg" alt="icon" />
+      <img class="stamp-arr" src="./assets/img/stamp-arr.svg" alt="icon" />
     </div>
   </div>
 </section>
