--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -251,13 +251,29 @@
   }
 
   &__item {
+    position: relative;
     padding: 24px 20px;
     box-shadow: 0 4px 44px 0 rgba(31, 31, 31, 0.2);
-    background: var(--dark-grey);
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    &:nth-child(1) {
+      background: var(--dark-grey) url("../../assets/img/about/v-decor-1.png") no-repeat 50% 50% / contain;
+    }
+
+    &:nth-child(2) {
+      background: var(--dark-grey) url("../../assets/img/about/v-decor-2.png") no-repeat 50% 50% / contain;
+    }
+
+    &:nth-child(3) {
+      background: var(--dark-grey) url("../../assets/img/about/v-decor-3.png") no-repeat 50% 50% / contain;
+    }
+
+    &:nth-child(4) {
+      background: var(--dark-grey) url("../../assets/img/about/v-decor-4.png") no-repeat 50% 50% / contain;
+    }
   }
 
   &__item-text {
