--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -129,6 +129,7 @@
     position: absolute;
     width: 26px;
     height: 26px;
+    animation: bounce-animation 2s linear infinite;
 
     @include mobile {
       width: 26px;
@@ -148,5 +149,18 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes bounce-animation {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(20px);
+  }
+  75% {
+    transform: translateY(-20px);
   }
 }
